--- a/commission.html
+++ b/commission.html
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Commission a Portrait — Annabel Fox">
     <meta name="twitter:description" content="Commission a hand-painted portrait by UK artist Annabel Fox. Soft realism in oils from your photographs. Prices, process and timings explained.">
-    <meta name="twitter:image" content="https://annabelfox.github.io/images/3_paintings_banner.jpg">
+    <meta name="twitter:image" content="https://annabelfox.github.io/3_paintings_banner.jpg">
   
     <link rel="stylesheet" href="style.css">
     <script defer src="app.js"></script>
@@ -139,7 +139,7 @@
           <!-- LEFT: Studio baby photo -->
           <figure>
             <!-- TODO: swap the src for your actual studio baby image -->
-            <img src="images/baby_portrait_painting_in_studio_800.jpg" alt="Portrait study of a baby in the studio, work-in-progress on the easel">
+            <img src="/images/baby_portrait_painting_in_studio_800.jpg" alt="Portrait study of a baby in the studio, work-in-progress on the easel">
             <figcaption class="sr-only">Studio baby portrait reference and work-in-progress.</figcaption>
           </figure>
 
