--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Portrait Artist in London | Oil Portrait Commissions | Annabel Fox</title>
     <meta name="description" content="London portrait artist Annabel Fox creates hand-painted oil portraits from your photographs. View portfolio and commission a bespoke piece.">
-    <link rel="canonical" href="https://annabelfox.github.io/">
+    <link rel="canonical" href="https://annabelfox.co.uk/">
   
     <!-- Favicons -->
     <link rel="icon" href="/favicon.ico">
