--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Portraits Portfolio — Oil Paintings & Commissions | Annabel Fox</title>
     <meta name="description" content="Browse oil portrait paintings and commission examples by London artist Annabel Fox.">
-    <link rel="canonical" href="https://annabelfox.github.io/portfolio.html">
+    <link rel="canonical" href="https://annabelfox.co.uk/portfolio">
   
     <!-- Favicons -->
     <link rel="icon" href="/favicon.ico">
