--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>About Annabel Fox — London Portrait Artist (Oil Paintings & Commissions)</title>
     <meta name="description" content="Learn about London portrait artist Annabel Fox: oil painting approach, background and commission enquiries.">
-    <link rel="canonical" href="https://annabelfox.github.io/about.html">
+    <link rel="canonical" href="https://annabelfox.co.uk/about">
   
     <!-- Favicons -->
     <link rel="icon" href="/favicon.ico">
