--- a/commission.html
+++ b/commission.html
@@ -6,7 +6,7 @@
   
     <title>Commission a Portrait — Annabel Fox</title>
     <meta name="description" content="Commission a hand-painted portrait by UK artist Annabel Fox. Soft realism in oils from your photographs. Prices, process and timings explained.">
-    <link rel="canonical" href="https://annabelfox.github.io/commission.html">
+    <link rel="canonical" href="https://annabelfox.co.uk/commission">
     <meta name="robots" content="index,follow,max-image-preview:large">
   
     <!-- Icons (optional, safe defaults) -->
