--- a/faqs.html
+++ b/faqs.html
@@ -6,7 +6,7 @@
   
     <title>FAQs — Annabel Fox</title>
     <meta name="description" content="Frequently asked questions about commissioning an oil portrait by UK artist Annabel Fox — prices, sizes, timings, process, shipping and how to get started.">
-    <link rel="canonical" href="https://annabelfox.github.io/faqs.html">
+    <link rel="canonical" href="https://annabelfox.co.uk/faqs">
     <meta name="robots" content="index,follow,max-image-preview:large">
   
     <!-- Icons (optional, safe defaults) -->
