--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Contact Annabel Fox — Portrait Commission Enquiries (London)</title>
     <meta name="description" content="Contact London portrait artist Annabel Fox to discuss an oil portrait commission from your photographs.">
-    <link rel="canonical" href="https://annabelfox.github.io/contact.html">
+    <link rel="canonical" href="https://annabelfox.co.uk/contact">
   
     <!-- Favicons -->
     <link rel="icon" href="/favicon.ico">
