--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <meta property="og:title" content="Portrait Artist in London | Oil Portrait Commissions | Annabel Fox">
     <meta property="og:description" content="Hand-painted oil portraits from your photographs. View portfolio and commission a bespoke piece.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.github.io/">
-    <meta property="og:image" content="https://annabelfox.github.io/images/3_paintings_banner.jpg">
+    <meta property="og:url" content="https://annabelfox.co.uk/">
+    <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
     <meta property="og:image:alt" content="Selected oil paintings by Annabel Fox">
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:url" content="https://annabelfox.co.uk/">
+
   
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
