--- a/commission.html
+++ b/commission.html
@@ -17,8 +17,8 @@
     <meta property="og:title" content="Commission a Portrait — Annabel Fox">
     <meta property="og:description" content="Commission a hand-painted portrait by UK artist Annabel Fox. Soft realism in oils from your photographs. Prices, process and timings explained.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.github.io/commission.html">
-    <meta property="og:image" content="https://annabelfox.github.io/images/3_paintings_banner.jpg">
+    <meta property="og:url" content="https://annabelfox.co.uk/portfolio">
+    <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
     <meta property="og:image:alt" content="Oil paintings by Annabel Fox — selection of portrait works">
     <meta property="og:locale" content="en_GB">
   
