--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@
     <meta property="og:title" content="Contact Annabel Fox — Portrait Commission Enquiries">
     <meta property="og:description" content="Send a message about pricing, timelines and your photo reference. UK delivery or collection.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.github.io/contact.html">
-    <meta property="og:image" content="https://annabelfox.github.io/images/3_paintings_banner.jpg">
+    <meta property="og:url" content="https://annabelfox.co.uk/contact">
+    <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
     <meta property="og:image:alt" content="Oil portrait examples">
     <meta name="twitter:card" content="summary_large_image">
   
