--- a/faqs.html
+++ b/faqs.html
@@ -17,8 +17,8 @@
     <meta property="og:title" content="FAQs — Annabel Fox">
     <meta property="og:description" content="Frequently asked questions about commissioning an oil portrait by UK artist Annabel Fox — prices, sizes, timings, process, shipping and how to get started.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.github.io/faqs.html">
-    <meta property="og:image" content="https://annabelfox.github.io/images/3_paintings_banner.jpg">
+    <meta property="og:url" content="https://annabelfox.co.uk/faqs">
+    <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
     <meta property="og:image:alt" content="Oil paintings by Annabel Fox — selection of portrait works">
     <meta property="og:locale" content="en_GB">
   
