--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
     <meta property="og:title" content="About Annabel Fox — London Portrait Artist">
     <meta property="og:description" content="Oil portrait painter based in London. Read about Annabel’s approach and commissioning info.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.github.io/about.html">
-    <meta property="og:image" content="https://annabelfox.github.io/images/Woman_graduation_photo_800.jpg">
+    <meta property="og:url" content="https://annabelfox.co.uk/about">
+    <meta property="og:image" content="https://annabelfox.co.uk/images/Woman_graduation_photo_800.jpg">
     <meta property="og:image:alt" content="Portrait artist Annabel Fox">
     <meta name="twitter:card" content="summary_large_image">
   
