--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
     <meta property="og:title" content="Portraits Portfolio — Oil Paintings & Commissions">
     <meta property="og:description" content="See recent oil portraits and commission work by Annabel Fox.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.github.io/portfolio.html">
-    <meta property="og:image" content="https://annabelfox.github.io/images/Friends_in_a_boat_painting_1600.jpg">
+    <meta property="og:url" content="https://annabelfox.co.uk/portfolio">
+    <meta property="og:image" content="https://annabelfox.co.uk/images/Friends_in_a_boat_painting_1600.jpg">
     <meta property="og:image:alt" content="Selected oil portraits by Annabel Fox">
     <meta name="twitter:card" content="summary_large_image">
   
