--- a/index.html
+++ b/index.html
@@ -1,64 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Portrait Artist in London | Oil Portrait Commissions | Annabel Fox</title>
-    <meta name="description" content="London portrait artist Annabel Fox creates hand-painted oil portraits from your photographs. View portfolio and commission a bespoke piece.">
-    <link rel="canonical" href="https://annabelfox.co.uk/">
-  
-    <!-- Favicons -->
-    <link rel="icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <meta name="theme-color" content="#ffffff">
-  
-    <!-- Open Graph / Twitter -->
-    <meta property="og:site_name" content="Annabel Fox — Portrait Artist">
-    <meta property="og:title" content="Portrait Artist in London | Oil Portrait Commissions | Annabel Fox">
-    <meta property="og:description" content="Hand-painted oil portraits from your photographs. View portfolio and commission a bespoke piece.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.co.uk/">
-    <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
-    <meta property="og:image:alt" content="Selected oil paintings by Annabel Fox">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:url" content="https://annabelfox.co.uk/">
+  <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
-  
-    <!-- JSON-LD: WebSite + Person -->
-    <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@graph":[
-        {
-          "@type":"WebSite",
-          "@id":"https://annabelfox.github.io/#website",
-          "url":"https://annabelfox.github.io/",
-          "name":"Annabel Fox — Portrait Artist",
-          "inLanguage":"en-GB"
-        },
-        {
-          "@type":"Person",
-          "@id":"https://annabelfox.github.io/#person",
-          "name":"Annabel Fox",
-          "url":"https://annabelfox.github.io/",
-          "jobTitle":"Portrait Artist",
-          "image":"https://annabelfox.github.io/Woman_graduation_photo_800.jpg",
-          "email":"mailto:annabel.e.m.fox@icloud.com",
-          "sameAs":[
-            "https://www.instagram.com/annabelfoxart",
-            "https://www.tiktok.com/@annabel.foxy"
-          ],
-          "address":{"@type":"PostalAddress","addressLocality":"Wandsworth","addressRegion":"London","addressCountry":"GB"}
-        }
-      ]
-    }
-    </script>
-  </head>  
+  <title>Portrait Artist in London | Oil Portrait Commissions | Annabel Fox</title>
+  <meta name="description" content="London portrait artist Annabel Fox creates hand-painted oil portraits from your photographs. View portfolio and commission a bespoke piece.">
+  <link rel="canonical" href="https://annabelfox.co.uk/">
+
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:site_name" content="Annabel Fox — Portrait Artist">
+  <meta property="og:title" content="Portrait Artist in London | Oil Portrait Commissions | Annabel Fox">
+  <meta property="og:description" content="Hand-painted oil portraits from your photographs. View portfolio and commission a bespoke piece.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://annabelfox.co.uk/">
+  <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
+  <meta property="og:image:alt" content="Selected oil paintings by Annabel Fox">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
+
+  <!-- JSON-LD: WebSite + Person -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@graph":[
+      {
+        "@type":"WebSite",
+        "@id":"https://annabelfox.co.uk/#website",
+        "url":"https://annabelfox.co.uk/",
+        "name":"Annabel Fox — Portrait Artist",
+        "inLanguage":"en-GB"
+      },
+      {
+        "@type":"Person",
+        "@id":"https://annabelfox.co.uk/#person",
+        "name":"Annabel Fox",
+        "url":"https://annabelfox.co.uk/",
+        "jobTitle":"Portrait Artist",
+        "image":"https://annabelfox.co.uk/images/Woman_graduation_photo_800.jpg",
+        "email":"mailto:annabel.e.m.fox@icloud.com",
+        "sameAs":[
+          "https://www.instagram.com/annabelfoxart",
+          "https://www.tiktok.com/@annabel.foxy"
+        ],
+        "address":{"@type":"PostalAddress","addressLocality":"Wandsworth","addressRegion":"London","addressCountry":"GB"}
+      }
+    ]
+  }
+  </script>
+</head>  
 <body>
   <header id="mainheader" role="banner">
     <div id="logo" aria-hidden="true">Annabel Fox</div>
