--- a/about.html
+++ b/about.html
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>About Annabel Fox — London Portrait Artist (Oil Paintings & Commissions)</title>
-    <meta name="description" content="Learn about London portrait artist Annabel Fox: oil painting approach, background and commission enquiries.">
-    <link rel="canonical" href="https://annabelfox.co.uk/about">
-  
-    <!-- Favicons -->
-    <link rel="icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <meta name="theme-color" content="#ffffff">
-  
-    <!-- Open Graph / Twitter -->
-    <meta property="og:site_name" content="Annabel Fox — Portrait Artist">
-    <meta property="og:title" content="About Annabel Fox — London Portrait Artist">
-    <meta property="og:description" content="Oil portrait painter based in London. Read about Annabel’s approach and commissioning info.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.co.uk/about">
-    <meta property="og:image" content="https://annabelfox.co.uk/images/Woman_graduation_photo_800.jpg">
-    <meta property="og:image:alt" content="Portrait artist Annabel Fox">
-    <meta name="twitter:card" content="summary_large_image">
-  
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
-  
-    <!-- JSON-LD: Breadcrumb + Person -->
-    <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@graph":[
-        {
-          "@type":"BreadcrumbList",
-          "itemListElement":[
-            {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.github.io/"},
-            {"@type":"ListItem","position":2,"name":"About","item":"https://annabelfox.github.io/about.html"}
-          ]
-        },
-        {
-          "@type":"Person",
-          "@id":"https://annabelfox.github.io/#person",
-          "name":"Annabel Fox",
-          "url":"https://annabelfox.github.io/about.html",
-          "jobTitle":"Portrait Artist",
-          "image":"https://annabelfox.github.io/images/Woman_graduation_photo_800.jpg",
-          "sameAs":[
-            "https://www.instagram.com/annabelfoxart",
-            "https://www.tiktok.com/@annabel.foxy"
-          ]
-        }
-      ]
-    }
-    </script>
-  </head>  
+  <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <title>About Annabel Fox — London Portrait Artist (Oil Paintings & Commissions)</title>
+  <meta name="description" content="Learn about London portrait artist Annabel Fox: oil painting approach, background and commission enquiries.">
+  <link rel="canonical" href="https://annabelfox.co.uk/about.html">
+
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:site_name" content="Annabel Fox — Portrait Artist">
+  <meta property="og:title" content="About Annabel Fox — London Portrait Artist">
+  <meta property="og:description" content="Oil portrait painter based in London. Read about Annabel’s approach and commissioning info.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://annabelfox.co.uk/about.html">
+  <meta property="og:image" content="https://annabelfox.co.uk/images/Woman_graduation_photo_800.jpg">
+  <meta property="og:image:alt" content="Portrait artist Annabel Fox">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
+
+  <!-- JSON-LD: Breadcrumb + Person -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@graph":[
+      {
+        "@type":"BreadcrumbList",
+        "itemListElement":[
+          {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.co.uk/"},
+          {"@type":"ListItem","position":2,"name":"About","item":"https://annabelfox.co.uk/about.html"}
+        ]
+      },
+      {
+        "@type":"Person",
+        "@id":"https://annabelfox.co.uk/#person",
+        "name":"Annabel Fox",
+        "url":"https://annabelfox.co.uk/about.html",
+        "jobTitle":"Portrait Artist",
+        "image":"https://annabelfox.co.uk/images/Woman_graduation_photo_800.jpg",
+        "sameAs":[
+          "https://www.instagram.com/annabelfoxart",
+          "https://www.tiktok.com/@annabel.foxy"
+        ]
+      }
+    ]
+  }
+  </script>
+</head>
 <body>
   <header id="mainheader" role="banner">
     <div id="logo" aria-hidden="true">Annabel Fox</div>
