--- a/commission.html
+++ b/commission.html
@@ -1,107 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  
-    <title>Commission a Portrait — Annabel Fox</title>
-    <meta name="description" content="Commission a hand-painted portrait by UK artist Annabel Fox. Soft realism in oils from your photographs. Prices, process and timings explained.">
-    <link rel="canonical" href="https://annabelfox.co.uk/commission">
-    <meta name="robots" content="index,follow,max-image-preview:large">
-  
-    <!-- Icons (optional, safe defaults) -->
-    <link rel="icon" href="/favicon.ico">
-  
-    <!-- Open Graph -->
-    <meta property="og:site_name" content="Annabel Fox">
-    <meta property="og:title" content="Commission a Portrait — Annabel Fox">
-    <meta property="og:description" content="Commission a hand-painted portrait by UK artist Annabel Fox. Soft realism in oils from your photographs. Prices, process and timings explained.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.co.uk/commission">
-    <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
-    <meta property="og:image:alt" content="Oil paintings by Annabel Fox — selection of portrait works">
-    <meta property="og:locale" content="en_GB">
-  
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Commission a Portrait — Annabel Fox">
-    <meta name="twitter:description" content="Commission a hand-painted portrait by UK artist Annabel Fox. Soft realism in oils from your photographs. Prices, process and timings explained.">
-    <meta name="twitter:image" content="https://annabelfox.github.io/images/3_paintings_banner.jpg">
-  
-    <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
-  
-    <!-- Breadcrumbs (helps understanding site structure) -->
-    <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@type":"BreadcrumbList",
-      "itemListElement":[
-        {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.github.io/"},
-        {"@type":"ListItem","position":2,"name":"Commission a Portrait","item":"https://annabelfox.github.io/commission.html"}
+  <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <title>Commission a Portrait — Annabel Fox</title>
+  <meta name="description" content="Commission a hand-painted portrait by UK artist Annabel Fox. Soft realism in oils from your photographs. Prices, process and timings explained.">
+  <link rel="canonical" href="https://annabelfox.co.uk/commission.html">
+  <meta name="robots" content="index,follow,max-image-preview:large">
+
+  <!-- Icons -->
+  <link rel="icon" href="/favicon.ico">
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="Annabel Fox">
+  <meta property="og:title" content="Commission a Portrait — Annabel Fox">
+  <meta property="og:description" content="Commission a hand-painted portrait by UK artist Annabel Fox. Soft realism in oils from your photographs. Prices, process and timings explained.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://annabelfox.co.uk/commission.html">
+  <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
+  <meta property="og:image:alt" content="Oil paintings by Annabel Fox — selection of portrait works">
+  <meta property="og:locale" content="en_GB">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Commission a Portrait — Annabel Fox">
+  <meta name="twitter:description" content="Commission a hand-painted portrait by UK artist Annabel Fox. Soft realism in oils from your photographs. Prices, process and timings explained.">
+  <meta name="twitter:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
+
+  <link rel="stylesheet" href="style.css">
+  <script defer src="app.js"></script>
+
+  <!-- Breadcrumbs -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.co.uk/"},
+      {"@type":"ListItem","position":2,"name":"Commission a Portrait","item":"https://annabelfox.co.uk/commission.html"}
+    ]
+  }
+  </script>
+
+  <!-- Service schema -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Service",
+    "name":"Portrait commission in oils",
+    "serviceType":"Portrait painting",
+    "description":"Commission a hand-painted portrait by UK artist Annabel Fox.",
+    "url":"https://annabelfox.co.uk/commission.html",
+    "areaServed":"GB",
+    "availableChannel":{"@type":"ServiceChannel","serviceUrl":"https://annabelfox.co.uk/contact.html"},
+    "offers":{"@type":"AggregateOffer","priceCurrency":"GBP","lowPrice":"300","availability":"https://schema.org/InStock"},
+    "provider":{
+      "@type":"Person",
+      "name":"Annabel Fox",
+      "url":"https://annabelfox.co.uk/",
+      "sameAs":[
+        "https://www.instagram.com/annabelfoxart",
+        "https://www.tiktok.com/@annabel.foxy"
       ]
     }
-    </script>
-  
-    <!-- Service schema (clear “what you offer”) -->
-    <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@type":"Service",
-      "name":"Portrait commission in oils",
-      "serviceType":"Portrait painting",
-      "description":"Commission a hand-painted portrait by UK artist Annabel Fox.",
-      "url":"https://annabelfox.github.io/commission.html",
-      "areaServed":"GB",
-      "availableChannel":{"@type":"ServiceChannel","serviceUrl":"https://annabelfox.github.io/contact.html"},
-      "offers":{"@type":"AggregateOffer","priceCurrency":"GBP","lowPrice":"300","availability":"https://schema.org/InStock"},
-      "provider":{
-        "@type":"Person",
-        "name":"Annabel Fox",
-        "url":"https://annabelfox.github.io/",
-        "sameAs":[
-          "https://www.instagram.com/annabelfoxart",
-          "https://www.tiktok.com/@annabel.foxy"
-        ]
-      }
-    }
-    </script>
-  
-    <!-- Page-scoped styles for the process grid and CTA buttons (unchanged) -->
-    <style>
-      /* 2-column block: photo left, text right; stacks on small screens */
-      .process-grid{
-        display:grid;
-        grid-template-columns: 1fr 1.1fr;
-        gap: 1.25rem 1.5rem;
-        align-items:start;
-      }
-      .process-grid figure{ margin:0; }
-      .process-grid img{
-        display:block; width:100%; height:auto; border-radius:6px;
-      }
-      @media (max-width: 840px){
-        .process-grid{ grid-template-columns: 1fr; }
-      }
-  
-      /* Price cards tidy spacing if you keep your existing markup */
-      .price-grid{
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        gap: 1rem;
-        margin: .75rem 0 0;
-      }
-      .price-card{
-        background: var(--soft, #f7f7f7);
-        padding: 1rem;
-        border-radius: 6px;
-      }
-      .price-card h4{ margin: 0 0 .5rem; font-size: .9rem; }
-      .price-card ul{ margin: 0 0 .5rem; padding-left: 1.1rem; }
-      .price-note{ margin: .25rem 0 0; font-size: .85rem; }
-    </style>
-  </head>  
+  }
+  </script>
+
+  <!-- Page-scoped styles (your originals) -->
+  <style>
+    .process-grid{display:grid;grid-template-columns:1fr 1.1fr;gap:1.25rem 1.5rem;align-items:start;}
+    .process-grid figure{margin:0;}
+    .process-grid img{display:block;width:100%;height:auto;border-radius:6px;}
+    @media (max-width:840px){.process-grid{grid-template-columns:1fr;}}
+    .price-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:1rem;margin:.75rem 0 0;}
+    .price-card{background:var(--soft,#f7f7f7);padding:1rem;border-radius:6px;}
+    .price-card h4{margin:0 0 .5rem;font-size:.9rem;}
+    .price-card ul{margin:0 0 .5rem;padding-left:1.1rem;}
+    .price-note{margin:.25rem 0 0;font-size:.85rem;}
+  </style>
+</head>
 <body>
   <header id="mainheader" role="banner">
     <div id="logo" aria-hidden="true">Annabel Fox</div>
