--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Contact Annabel Fox — Portrait Commission Enquiries (London)</title>
-    <meta name="description" content="Contact London portrait artist Annabel Fox to discuss an oil portrait commission from your photographs.">
-    <link rel="canonical" href="https://annabelfox.co.uk/contact">
-  
-    <!-- Favicons -->
-    <link rel="icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <meta name="theme-color" content="#ffffff">
-  
-    <!-- Open Graph / Twitter -->
-    <meta property="og:site_name" content="Annabel Fox — Portrait Artist">
-    <meta property="og:title" content="Contact Annabel Fox — Portrait Commission Enquiries">
-    <meta property="og:description" content="Send a message about pricing, timelines and your photo reference. UK delivery or collection.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.co.uk/contact">
-    <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
-    <meta property="og:image:alt" content="Oil portrait examples">
-    <meta name="twitter:card" content="summary_large_image">
-  
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
-  
-    <!-- JSON-LD: Breadcrumb + ContactPage -->
-    <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@graph":[
-        {
-          "@type":"BreadcrumbList",
-          "itemListElement":[
-            {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.github.io/"},
-            {"@type":"ListItem","position":2,"name":"Contact","item":"https://annabelfox.github.io/contact.html"}
-          ]
-        },
-        {
-          "@type":"ContactPage",
-          "name":"Contact — Commission Enquiries",
-          "url":"https://annabelfox.github.io/contact.html"
-        }
-      ]
-    }
-    </script>
-  </head>  
+  <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <title>Contact Annabel Fox — Portrait Commission Enquiries (London)</title>
+  <meta name="description" content="Contact London portrait artist Annabel Fox to discuss an oil portrait commission from your photographs.">
+  <link rel="canonical" href="https://annabelfox.co.uk/contact.html">
+
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:site_name" content="Annabel Fox — Portrait Artist">
+  <meta property="og:title" content="Contact Annabel Fox — Portrait Commission Enquiries">
+  <meta property="og:description" content="Send a message about pricing, timelines and your photo reference. UK delivery or collection.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://annabelfox.co.uk/contact.html">
+  <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
+  <meta property="og:image:alt" content="Oil portrait examples">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="stylesheet" href="style.css">
+  <script src="app.js" defer></script>
+
+  <!-- JSON-LD: Breadcrumb + ContactPage -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@graph":[
+      {
+        "@type":"BreadcrumbList",
+        "itemListElement":[
+          {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.co.uk/"},
+          {"@type":"ListItem","position":2,"name":"Contact","item":"https://annabelfox.co.uk/contact.html"}
+        ]
+      },
+      {
+        "@type":"ContactPage",
+        "name":"Contact — Commission Enquiries",
+        "url":"https://annabelfox.co.uk/contact.html"
+      }
+    ]
+  }
+  </script>
+</head>
 <body>
   <header id="mainheader" role="banner">
     <div id="logo" aria-hidden="true">Annabel Fox</div>
