--- a/faqs.html
+++ b/faqs.html
@@ -1,179 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  
-    <title>FAQs — Annabel Fox</title>
-    <meta name="description" content="Frequently asked questions about commissioning an oil portrait by UK artist Annabel Fox — prices, sizes, timings, process, shipping and how to get started.">
-    <link rel="canonical" href="https://annabelfox.co.uk/faqs">
-    <meta name="robots" content="index,follow,max-image-preview:large">
-  
-    <!-- Icons (optional, safe defaults) -->
-    <link rel="icon" href="/favicon.ico">
-  
-    <!-- Open Graph -->
-    <meta property="og:site_name" content="Annabel Fox">
-    <meta property="og:title" content="FAQs — Annabel Fox">
-    <meta property="og:description" content="Frequently asked questions about commissioning an oil portrait by UK artist Annabel Fox — prices, sizes, timings, process, shipping and how to get started.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://annabelfox.co.uk/faqs">
-    <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
-    <meta property="og:image:alt" content="Oil paintings by Annabel Fox — selection of portrait works">
-    <meta property="og:locale" content="en_GB">
-  
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="FAQs — Annabel Fox">
-    <meta name="twitter:description" content="Frequently asked questions about commissioning an oil portrait by UK artist Annabel Fox — prices, sizes, timings, process, shipping and how to get started.">
-    <meta name="twitter:image" content="https://annabelfox.github.io/images/3_paintings_banner.jpg">
-  
-    <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
-  
-    <!-- light page-scoped styles for flat Q&A layout (unchanged) -->
-    <style>
-      .faq-page .kicker { font-weight:600; margin:.6rem 0 .25rem; }
-      .faq-list { display:grid; gap:.9rem; margin:1rem 0; padding:0; list-style:none; }
-      .faq-qa .q { font-weight:600; margin:0 0 .25rem; }
-      .faq-qa .a { margin:.15rem 0 0; }
-    </style>
-  
-    <!-- Breadcrumbs -->
-    <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@type":"BreadcrumbList",
-      "itemListElement":[
-        {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.github.io/"},
-        {"@type":"ListItem","position":2,"name":"FAQs","item":"https://annabelfox.github.io/faqs.html"}
-      ]
-    }
-    </script>
-  
-    <!-- ✅ FAQ schema (rich results) — unchanged -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "FAQPage",
-      "mainEntity": [
-        {
-          "@type": "Question",
-          "name": "How much does it cost to commission a painting?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Portrait commissions start at £300 for A5, £500 for A4, and £750 for A3 (all unframed). Final pricing depends on number of subjects and complexity."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What sizes and options do you offer?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Standard sizes are A5, A4, and A3. Custom sizes and shapes are available on request. I typically work on canvas or canvas board."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What kind of paint do you use?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "I work exclusively with oil paints."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "How long does a portrait take to complete?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Approx. 4–6 weeks for A5 and 6–8 weeks for A4 or A3, depending on complexity, queue and oil drying time."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "How do I commission a painting? What is the process?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Send a commission request with your idea and reference photos. Once we agree on details and price, a 10% deposit secures your slot. I paint the piece and email progress. After you approve photos of the finished work, the balance is paid and the painting is delivered or collected."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Do I need to pay a deposit? What are the payment terms?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Yes. A 10% deposit is required to book the commission. The remaining balance is due after you’ve approved the finished painting, before delivery."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Do you work from photos or do I need to sit?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "I work from your photographs, so there’s no need to sit in person. Clear, well-lit images yield the best results."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What kind of photo should I provide?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Send multiple clear, well-lit photos. The face should be in focus and the pose or expression should be what you want painted. I’ll help pick the best reference."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Do the portraits come framed?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Paintings are supplied unframed so you can choose a frame to suit your space."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Do you ship UK-wide?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Yes — UK commissions only. You can collect near London or I can arrange insured UK shipping."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Can you do rush orders?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Sometimes. Standard commissions take at least 4 weeks. If you have a short deadline, ask and I’ll confirm what’s possible."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Will I see the painting before delivery?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Yes. I can share progress photos, and you’ll approve the finished piece by photo before delivery or collection."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "What if I’m not happy with the finished painting?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "We choose the right reference image together at the start, so the outcome matches expectations. If you love the photo, you’ll love the painting."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Do you take non-portrait commissions?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Portraits are my focus, but I occasionally accept pets or still-life pieces — feel free to ask."
-          }
+  <meta name="google-site-verification" content="ug9kBj3TFZKcyxyR2H4Slhvee898HY39bISGiVp8IBo" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <title>FAQs — Annabel Fox</title>
+  <meta name="description" content="Frequently asked questions about commissioning an oil portrait by UK artist Annabel Fox — prices, sizes, timings, process, shipping and how to get started.">
+  <link rel="canonical" href="https://annabelfox.co.uk/faqs.html">
+  <meta name="robots" content="index,follow,max-image-preview:large">
+
+  <!-- Icons -->
+  <link rel="icon" href="/favicon.ico">
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="Annabel Fox">
+  <meta property="og:title" content="FAQs — Annabel Fox">
+  <meta property="og:description" content="Frequently asked questions about commissioning an oil portrait by UK artist Annabel Fox — prices, sizes, timings, process, shipping and how to get started.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://annabelfox.co.uk/faqs.html">
+  <meta property="og:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
+  <meta property="og:image:alt" content="Oil paintings by Annabel Fox — selection of portrait works">
+  <meta property="og:locale" content="en_GB">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="FAQs — Annabel Fox">
+  <meta name="twitter:description" content="Frequently asked questions about commissioning an oil portrait by UK artist Annabel Fox — prices, sizes, timings, process, shipping and how to get started.">
+  <meta name="twitter:image" content="https://annabelfox.co.uk/images/3_paintings_banner.jpg">
+
+  <link rel="stylesheet" href="style.css">
+  <script defer src="app.js"></script>
+
+  <!-- light page-scoped styles -->
+  <style>
+    .faq-page .kicker{font-weight:600;margin:.6rem 0 .25rem;}
+    .faq-list{display:grid;gap:.9rem;margin:1rem 0;padding:0;list-style:none;}
+    .faq-qa .q{font-weight:600;margin:0 0 .25rem;}
+    .faq-qa .a{margin:.15rem 0 0;}
+  </style>
+
+  <!-- Breadcrumbs -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://annabelfox.co.uk/"},
+      {"@type":"ListItem","position":2,"name":"FAQs","item":"https://annabelfox.co.uk/faqs.html"}
+    ]
+  }
+  </script>
+
+  <!-- FAQ schema (unchanged content) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "How much does it cost to commission a painting?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Portrait commissions start at £300 for A5, £500 for A4, and £750 for A3 (all unframed). Final pricing depends on number of subjects and complexity."
         }
-      ]
-    }
-    </script>
-  </head>  
+      },
+      {
+        "@type": "Question",
+        "name": "What sizes and options do you offer?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Standard sizes are A5, A4, and A3. Custom sizes and shapes are available on request. I typically work on canvas or canvas board."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What kind of paint do you use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "I work exclusively with oil paints."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How long does a portrait take to complete?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Approx. 4–6 weeks for A5 and 6–8 weeks for A4 or A3, depending on complexity, queue and oil drying time."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I commission a painting? What is the process?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Send a commission request with your idea and reference photos. Once we agree on details and price, a 10% deposit secures your slot. I paint the piece and email progress. After you approve photos of the finished work, the balance is paid and the painting is delivered or collected."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need to pay a deposit? What are the payment terms?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. A 10% deposit is required to book the commission. The remaining balance is due after you’ve approved the finished painting, before delivery."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you work from photos or do I need to sit?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "I work from your photographs, so there’s no need to sit in person. Clear, well-lit images yield the best results."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What kind of photo should I provide?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Send multiple clear, well-lit photos. The face should be in focus and the pose or expression should be what you want painted. I’ll help pick the best reference."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do the portraits come framed?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Paintings are supplied unframed so you can choose a frame to suit your space."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you ship UK-wide?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes — UK commissions only. You can collect near London or I can arrange insured UK shipping."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can you do rush orders?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Sometimes. Standard commissions take at least 4 weeks. If you have a short deadline, ask and I’ll confirm what’s possible."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will I see the painting before delivery?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. I can share progress photos, and you’ll approve the finished piece by photo before delivery or collection."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What if I’m not happy with the finished painting?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We choose the right reference image together at the start, so the outcome matches expectations. If you love the photo, you’ll love the painting."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you take non-portrait commissions?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Portraits are my focus, but I occasionally accept pets or still-life pieces — feel free to ask."
+        }
+      }
+    ]
+  }
+  </script>
+</head>  
 <body>
   <header id="mainheader" role="banner">
     <div id="logo" aria-hidden="true">Annabel Fox</div>
